womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/bad_nested_task_output_assignment_type/import_me.wdl
version 1.0

workflow inner_workflow {
  call inner_task

  output {
    String x = inner_task.x
  }
}

task inner_task {
  command {
  }
  output {
    String x = "x"
  }
  runtime {
    docker: "ubuntu:latest"
  }
}
